--- a/Frontend/client/src/index.css
+++ b/Frontend/client/src/index.css
@@ -25,12 +25,13 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.2em;
   line-height: 1.1;
 }
 p{
-  font-size: 2.2em;
-  line-height: 0.5;
+  margin: 0;
+  font-size: 1.9em;
+  line-height: 1.1;
 }
 button {
 
