--- a/Frontend/client/src/index.css
+++ b/Frontend/client/src/index.css
@@ -22,9 +22,10 @@ body {
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  
 }
 
-h1 {
+/* h1 {
   font-size: 2.2em;
   line-height: 1.1;
 }
@@ -32,7 +33,7 @@ p{
   margin: 0;
   font-size: 1.9em;
   line-height: 1.1;
-}
+} */
 button {
 
 }
