--- a/Frontend/client/src/components/components.css
+++ b/Frontend/client/src/components/components.css
@@ -55,8 +55,8 @@
   button{
     background-color: #fdd404;
     border: none;
-    margin: 1%;
-    padding: 2%;
+    width: 100%;
+    height: 3em;
   }
   #welcomepage{
     justify-content: center;
@@ -81,4 +81,49 @@
     height: 100px;
     width: 100px;
     background-color: white;
+  }
+  /* Homepage.jsx */
+  #Homepage{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+  }
+  
+  #bg1{
+    position: absolute;
+    top: 50%;
+    left: 78%;
+  }
+  /* AddGadgetForm.jsx */
+#AddGadgetFormContainer{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #AddGadgetForm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #0972ba;
+    padding: 10% 70%;
+    scale: 1.3;
+  }
+  input{
+    padding: 2%;
+  }
+  #addentitybtn{
+    width:100px
+  }
+
+  #imgdiv img{
+    height: 100%;
+    width: 100%;
   }
