--- a/Frontend/client/src/components/components.css
+++ b/Frontend/client/src/components/components.css
@@ -1,20 +1,29 @@
   .flex{
     display: flex;
   }
-  #nav{
+  #nav,#footer{
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: #0972ba;
+    width: 100vw;
     /* border-bottom: #0972ba 5px solid; */
+  }
+  #footer{
+    position: fixed;
+    bottom: 0;
+
   }
   #logoandname{
     justify-content: center;
     height: 10vh;
     align-items: center;
   }
-  img{
+  #Dimg{
     height: 50%;
+  }
+  #Dlogo{
+    height: 150%;
   }
   #pocket{
     width: 30vw;
